--- a/BulkyBookWeb/appsettings.json
+++ b/BulkyBookWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS; User ID=sa; Password=12345678; Database=Bulky;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS; User ID=sa; Password=P@ssq0rd; Database=Bulky;TrustServerCertificate=True"
   }
 }
